--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <script src="./content/shared/js/console.js"></script>
     <link href="./css/kendo.common.min.css" rel="stylesheet" />
     <link href="./css/kendo.mobile.all.min.css" rel="stylesheet" />
-	<script type="text/javascript" charset="utf-8" src="mycode.js"></script>
+	<script type="text/javascript" charset="utf-8" src="mycode3.js"></script>
 	<script type="text/javascript" charset="utf-8" src="./js/cordova-2.4.0.js"></script>
 	<script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
 </head>
     <a href="./index.html">Back</a>
     <div data-role="view" id="modalview-camera" data-title="HTML5 Camera">
     <!-- <img src="./img/lens.png" class="camera-image" /><br /> -->
-	<img src="./img/title320.png" class="camera-image" onclick="msg()" /><br />
-    <a data-role="button" data-rel="modalview" href="#modalview-login" id="modalview-open-button" onclick="msg()">Login</a>
+	<img src="./img/title320.png" class="camera-image" onclick="onClick()" /><br />
+    <a data-role="button" data-rel="modalview" href="#modalview-login" id="modalview-open-button">Login</a>
 </div>
 
             <div id="deviceready" class="blink">
@@ -111,4 +111,6 @@
     </script>
 
 </body>
+</html>
+y>
 </html>
