--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@ My recording here
     }
 	function checkModalViewLogin() {
 		$("#modalview-login").kendoMobileModalView("close");
+        gotFS(fsRef);
 		//onLogin();
 		//dataInit();
     }
