--- a/index.html
+++ b/index.html
@@ -191,8 +191,9 @@ My recording here
     }
 	function checkModalViewLogin() {
 		$("#modalview-login").kendoMobileModalView("close");
-        gotFS(fsRef);
 		//onLogin();
+        //gotFS(fsRef);
+        onInitFs(fsRef);
 		//dataInit();
     }
 	function skipModalViewLogin() {
