--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ My recording here
 		$("#modalview-login").kendoMobileModalView("close");
 		//onLogin();
         //gotFS(fsRef);
-        onInitFs(fsRef);
+        //onInitFs(fsRef);
 		//dataInit();
     }
 	function skipModalViewLogin() {
