--- a/index.html
+++ b/index.html
@@ -154,9 +154,11 @@
 
 <div id="view-teacherZone" data-role="view" data-title="Teacher Zone" data-layout="inApp-layout">
     Teacher Zone here
+    <!-- comment out
     <div style="width: 100%; height: 100%; margin: 0px auto;">
             <div id="my_progress_bar_1" style="position: relative; top: 45%; margin: 0px auto;"></div>
     </div>
+    -->
 </div>
 
 <div id="view-settings" data-role="view" data-title="MVP Settings" data-layout="inApp-layout">
