--- a/index.html
+++ b/index.html
@@ -155,9 +155,7 @@
 <div id="view-teacherZone" data-role="view" data-title="Teacher Zone" data-layout="inApp-layout">
     Teacher Zone here
     
-    <div style="width: 100%; height: 100%; margin: 0px auto;">
-            <div id="my_progress_bar_1" style="position: relative; top: 45%; margin: 0px auto;">this is the bar</div>
-    </div>
+            <div id="my_progress_bar_1"><div>0%</div></div>
    
 </div>
 
