--- a/index.html
+++ b/index.html
@@ -154,8 +154,9 @@
 
 <div id="view-teacherZone" data-role="view" data-title="Teacher Zone" data-layout="inApp-layout">
     Teacher Zone here
-    
-            <div id="my_progress_bar_1"><div>0%</div></div>
+    <div id="my_progress_bar_1">
+        <progress value="22" max="100"></progress>
+    </div>
    
 </div>
 
