--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <div id="progressVar">
         variable
 	</div>
-    <div id="my_progress_bar_0">
+    <div id="my_progress_bar_1">
         <progress value="22" max="100"></progress>
     </div>
    
@@ -250,7 +250,7 @@ My recording here
     		
     	},
     	1000);
-        alert("finished loading progressBar")è
+        alert("finished loading progressBar");
     }
     
     loadProgressBar();
