--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         variable
 	</div>
     <div id="my_progress_bar_1">
-        <progress value="22" max="100"></progress>
+        progress bar here
     </div>
    
 </div>
