--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
     <title>Basic usage</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-    <script src="./js/jquery.min.js"></script>
+    <!--<script src="./js/jquery.min.js"></script> -->
     <script src="./js/kendo.mobile.min.js"></script>
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
+    <link rel="stylesheet" type="text/css" href="./css/tolito-1.0.1.css" />
+    <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
+    <script src="./js/tolito-1.0.1.js"></script>
     <script src="./content/shared/js/console.js"></script>
     <link href="./css/kendo.common.min.css" rel="stylesheet" />
     <link href="./css/kendo.mobile.all.min.css" rel="stylesheet" />
