--- a/index.html
+++ b/index.html
@@ -161,10 +161,15 @@
 </div>
 
 <div id="view-teacherZone" data-role="view" data-title="Teacher Zone" data-layout="inApp-layout">
-    <div id="progressVar">
-        variable
+    <div data-role="page" id="home-page">
+            <div data-role="content">
+                variable
+                <div id="progressbar"></div>
+            </div>
+            
+        <div id="progressbar"></div>
 	</div>
-    <div id="progressbar"></div>
+    
    
 </div>
 
