--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	
 	
 	<!-- JQUERY MIN -->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <!-- <script src="./js/jquery.min.js"></script> -->
+	<!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
+    <script src="./js/jquery.min.js"></script>
 	
 	
     <script src="./js/kendo.mobile.min.js"></script>
