--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
 			<input type="date" name="fromDate" id="fromDate" />
 			
 			<div id="example" class="k-content">
-            <div id="background">
-				<div id="calendar"></div>
-			</div>
+				<div id="special-days">
+                <div id="calendar" style="width: 310px;"></div>
+            </div>
 <style scoped>
                 #special-days {
                     height: 240px;
