--- a/index.html
+++ b/index.html
@@ -180,7 +180,11 @@
                     padding: 22px 0 22px 21px;
                     background: url('./content/web/calendar/specialDays.png') transparent no-repeat 0 0;
                 }
-
+				
+				#example {
+					background-color: black;
+				}
+				
                 #calendar {
                     border-radius: 3px 3px 3px 3px;
                     border-style: solid;
